CLAUDE.md: float/double concat -- the bake domain cannot carry the JDK formatters
Attempted end to end, measured, reverted. The findings are the deliverable, and
they point the next attempt at a different seam.

ESTABLISHED. Stock Double.toString/Float.toString ALREADY run on metal and are
byte-identical to a host JVM on 1.5, 0.1, 0.0, -0.0, 1e20, 1e-9 and NaN -- so
nobody should write a shortest-round-trip formatter here. A host control also
killed the obvious shortcut before it shipped: Float.toString(0.1f) is "0.1"
while Double.toString((double) 0.1f) is "0.10000000149011612", so float needs its
own helper and widening would have been wrong in every float concat. And the
lowering is already solved -- a double travels as raw bits in an ordinary 64-bit
operand register and longBitsToDouble is an identity native, so the existing
integer movReg path carries it with no FP marshalling.

DEAD. Calling the formatter from a BAKED helper, which VMBox made look right.
The writer refuses it two independent ways: DoubleToDecimal.<clinit> uses an ldc
class literal the host writer cannot compile, and DoubleToDecimal.special -- the
NaN/Infinity/+-0.0 path -- does not resolve. Neither is a cap to raise. The
attempt printed [1.5] and [0.1] exact on metal before stopping at -0.0.

Also measured on the way: it needs --add-opens java.base/jdk.internal.math (the
build already does this for java.lang), baking Double runs its <clinit> in
VM.initClasses where getPrimitiveClass faults at boot (fixed by bakeNoClinit,
beside Integer and Long which were already there), and the image cost is
+53,624 bytes.

THE SEAM THAT SHOULD WORK is named in the card: resolve by name at runtime via
bufBySigU/compileSigOnDemand + Magic.callN, the shape seedStandardProps already
uses, keeping DoubleToDecimal in the loader world where it demonstrably runs.

Tree reverted to a2da65b's behaviour; gates green (compiler: 40, overlay 0 new).

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claud